Regression: Rendering object with normal map differs in Cycles and Cycles + OSL #98163

Closed
opened 2022-05-16 14:27:18 +02:00 by Michael Soluyanov · 8 comments

System Information
Operating system: Windows-10-10.0.19044-SP0 64 Bits
Graphics card: GeForce RTX 2060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 456.38

Blender Version
Broken: version: 3.1.2, branch: master, commit date: 2022-03-31 17:40, hash: cc66d1020c
Worked: version: 3.0.0

Caused by 7bb572f208

Short description of error
Rendering object with normal map differs in Cycles and Cycles + OSL

Exact steps for others to reproduce the error

  1. Open the file

normal_map.blend

  1. Check view in renders

EEVEE:

eevee.jpg

Cycles with OSL enabled:

cycles osl.jpg

Cycles without OSL:

cycles.jpg

3.0 version also has difference, but between Cycles and EEVEE (looks like it was reported here: https://developer.blender.org/T56209).

**System Information** Operating system: Windows-10-10.0.19044-SP0 64 Bits Graphics card: GeForce RTX 2060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 456.38 **Blender Version** Broken: version: 3.1.2, branch: master, commit date: 2022-03-31 17:40, hash: `cc66d1020c` Worked: version: 3.0.0 Caused by 7bb572f208 **Short description of error** Rendering object with normal map differs in Cycles and Cycles + OSL **Exact steps for others to reproduce the error** 1. Open the file [normal_map.blend](https://archive.blender.org/developer/F13079271/normal_map.blend) 2. Check view in renders EEVEE: ![eevee.jpg](https://archive.blender.org/developer/F13079275/eevee.jpg) Cycles with OSL enabled: ![cycles osl.jpg](https://archive.blender.org/developer/F13079277/cycles_osl.jpg) Cycles without OSL: ![cycles.jpg](https://archive.blender.org/developer/F13079280/cycles.jpg) 3.0 version also has difference, but between Cycles and EEVEE (looks like it was reported here: https://developer.blender.org/T56209).
Author
Member

Added subscriber: @crantisz

Added subscriber: @crantisz

Added subscriber: @ThomasDinges

Added subscriber: @ThomasDinges

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Can confirm the visual difference between OSL and SVM.

Can confirm the visual difference between OSL and SVM.
Member

Added subscribers: @brecht, @lichtwerk

Added subscribers: @brecht, @lichtwerk
Member

Caused by 7bb572f208
I might be missing something, but case presented here seems legit, @brecht : mind checking?

Caused by 7bb572f208 I might be missing something, but case presented here seems legit, @brecht : mind checking?
Philipp Oeser changed title from Rendering object with normal map differs in Cycles and Cycles + OSL to Regression: Rendering object with normal map differs in Cycles and Cycles + OSL 2022-05-17 11:24:39 +02:00

This issue was referenced by 8fdd3aad9b

This issue was referenced by 8fdd3aad9bd8bd463b9b792f0d9063c2330aadfa

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Brecht Van Lommel self-assigned this 2022-05-17 17:01:07 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#98163
No description provided.