Fix T98163: Cycles OSL rendering normal maps differently

Match SVM and ensure valid reflection when setting up BSDFs.